@@ -58,14 +58,14 @@ class GetSpaceListServiceTest {
         assertNotNull(paginatedResponse);
         assertNotNull(result.getItems());
         assertEquals(2, result.getItems().size());
-        assertEquals(spacePortList.get(0).space().getId(), result.getItems().get(0).id());
-        assertEquals(spacePortList.get(0).space().getTitle(), result.getItems().get(0).title());
-        assertEquals(space1.getOwnerId(), result.getItems().get(0).owner().id());
-        assertEquals(ownerName, result.getItems().get(0).owner().displayName());
-        assertTrue(result.getItems().get(0).owner().isCurrentUserOwner());
-        assertEquals(spacePortList.get(0).space().getLastModificationTime(), result.getItems().get(0).lastModificationTime());
-        assertEquals(spacePortList.get(0).assessmentsCount(), result.getItems().get(0).assessmentsCount());
-        assertEquals(spacePortList.get(0).membersCount(), result.getItems().get(0).membersCount());
+        assertEquals(spacePortList.getFirst().space().getId(), result.getItems().getFirst().id());
+        assertEquals(spacePortList.getFirst().space().getTitle(), result.getItems().getFirst().title());
+        assertEquals(space1.getOwnerId(), result.getItems().getFirst().owner().id());
+        assertEquals(ownerName, result.getItems().getFirst().owner().displayName());
+        assertTrue(result.getItems().getFirst().owner().isCurrentUserOwner());
+        assertEquals(spacePortList.getFirst().space().getLastModificationTime(), result.getItems().getFirst().lastModificationTime());
+        assertEquals(spacePortList.getFirst().assessmentsCount(), result.getItems().getFirst().assessmentsCount());
+        assertEquals(spacePortList.getFirst().membersCount(), result.getItems().getFirst().membersCount());
 
         assertEquals(spacePortList.get(1).space().getId(), result.getItems().get(1).id());
         assertEquals(spacePortList.get(1).space().getTitle(), result.getItems().get(1).title());
